@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 19:07:43 brook Exp $
+
+SHA1 (R/httr_1.4.1.tar.gz) = f457d46f87b61a399ee0b72e19e5d169f76289f8
+RMD160 (R/httr_1.4.1.tar.gz) = 34e3d10b37b21368dc8fe932268ad4d2fc932bdf
+SHA512 (R/httr_1.4.1.tar.gz) = 708984effcec7603ebcbc2a2f81b57500887084a5144855921119e32bc1bb3a01c1871d3144fd34850bc771ef5fddc1ce9d40dd4bdc4325e01c7a4315a463641
+Size (R/httr_1.4.1.tar.gz) = 158465 bytes
